// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Side effect: data snapshot 1`] = `
<div>
  <h3>
    weather-widget
  </h3>
  <pre>
    <a
      href="https://github.com/sombreroEnPuntas/weather-widget"
    >
      Check the code on github!
    </a>
  </pre>
  <div
    class="wrapper"
  >
    <header
      class="header"
    >
      <article
        class="article"
      >
        <img
          alt="cloudy sky"
          height="75"
          src="/weather-cloud.svg"
          width="75"
        />
        <div>
          <div
            class="articleHeading"
          >
            Cloudy
              
            13
            ° /
            12
            °
          </div>
          <div
            class="articleOverlineBig"
            data-testid="articleOverlineBig"
          >
            13
            °
          </div>
        </div>
      </article>
      <article
        class="article"
      >
        <div>
          <div
            class="articleHeading"
          >
            Rivendell
          </div>
          <div
            class="articleOverline"
          >
            <span
              style="white-space: pre-line;"
            >
              Donnerstag
 16. Februar
            </span>
          </div>
        </div>
      </article>
    </header>
    <ul
      class="hourlyData"
    >
      <li
        class="hourlyDataItem"
      >
        <button
          data-testid="2020-09-29-11:00"
        >
          <div>
            11:00
          </div>
          <img
            alt="cloudy sky"
            height="75"
            src="/weather-cloud.svg"
            width="75"
          />
          <div>
            13
            °
          </div>
        </button>
      </li>
      <li
        class="hourlyDataItem"
      >
        <button
          data-testid="2020-09-29-12:00"
        >
          <div>
            12:00
          </div>
          <img
            alt="clear sky"
            height="75"
            src="/weather-sun.svg"
            width="75"
          />
          <div>
            12
            °
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Side effect: error snapshot 1`] = `
<div>
  <h3>
    weather-widget
  </h3>
  <pre>
    <a
      href="https://github.com/sombreroEnPuntas/weather-widget"
    >
      Check the code on github!
    </a>
  </pre>
  <div
    class="wrapper"
  >
    418: The resulting entity body MAY be short and stout.
  </div>
</div>
`;

exports[`Side effect: loading snapshot 1`] = `
<div>
  <h3>
    weather-widget
  </h3>
  <pre>
    <a
      href="https://github.com/sombreroEnPuntas/weather-widget"
    >
      Check the code on github!
    </a>
  </pre>
  <div
    class="wrapper"
  >
    loading...
  </div>
</div>
`;
